# shopifyte-api

./: .env.sample  .gitignore  Makefile  README.md  pyproject.toml  pyrightconfig.json  requirements.txt
apps/images/: admin.py  api.py  models.py  schemas.py  services.py
apps/products/: admin.py  api.py  models.py  schemas.py  services.py
apps/shops/: admin.py  api.py  exceptions.py  models.py  schemas.py  services.py  utils.py
apps/users/: admin.py  api.py  exceptions.py  models.py  schema.py  schemas.py  services.py  utils.py
config/: settings.py  urls.py
core/: admin.py  api.py  auth.py  cache.py  exception_handler.py  exceptions.py  models.py  pagination.py  permissions.py  router.py  schema.py  utils.py
core/exceptions/: auth.py  email.py  token.py  verification.py
core/services/: email.py  token_service.py  verification.py
helpers/: utils.py
templates/emails/confirmation/: body.html  body.txt  subject.txt
templates/emails/password_reset/: body.html  body.txt
templates/emails/shop_welcome/: body.html  body.txt  subject.txt
typings/core/: router.pyi
users/: admin.py  api.py  models.py  schema.py
users/api/: auth.py  stores.py  users.py
users/migrations/: 0001_initial.py  0002_alter_user_zipcode.py  0002_user_zipcode.py  0003_user_phone_number.py  0004_vendor_store_zipcode_alter_user_zipcode_and_more.py  0005_vendor_store_slug.py  0006_rename_vendor_store_alter_user_is_active.py  0007_rename_is_vendor_user_email_verified_user_has_store_and_more.py
